# GNSDKWrapperLib-CPP

./: CMakeLists.txt
cmake/: FindGNSDK.cmake
include/: gn_audiosource.hpp  gn_bundlesource.hpp  gn_userstore.hpp  gnsdk.hpp  gnsdk_base.hpp  gnsdk_convert.hpp  gnsdk_dsp.hpp  gnsdk_error.hpp  gnsdk_link.hpp  gnsdk_list.hpp  gnsdk_locale.hpp  gnsdk_log.hpp  gnsdk_lookup_local.hpp  gnsdk_lookup_localstream.hpp  gnsdk_manager.hpp  gnsdk_moodgrid.hpp  gnsdk_musicid.hpp  gnsdk_musicidfile.hpp  gnsdk_musicidstream.hpp  gnsdk_playlist.hpp  gnsdk_rhythm.hpp  gnsdk_std.hpp  gnsdk_storage_qnx.hpp  gnsdk_storage_sqlite.hpp  gnsdk_taste.hpp  gnsdk_video.hpp  metadata.hpp  metadata_acr.hpp  metadata_match.hpp  metadata_music.hpp  metadata_video.hpp
lib/linux_arm-32/: libgnsdk_dsp.so.3.07.7  libgnsdk_link.so.3.07.7  libgnsdk_lookup_local.so.3.07.7  libgnsdk_lookup_localstream.so.3.07.7  libgnsdk_manager.so.3.07.7  libgnsdk_moodgrid.so.3.07.7  libgnsdk_musicid.so.3.07.7  libgnsdk_musicid_file.so.3.07.7  libgnsdk_musicid_stream.so.3.07.7  libgnsdk_playlist.so.3.07.7  libgnsdk_storage_sqlite.so.3.07.7  libgnsdk_video.so.3.07.7
lib/linux_armhf-32/: libgnsdk_dsp.so.3.07.7  libgnsdk_link.so.3.07.7  libgnsdk_lookup_local.so.3.07.7  libgnsdk_lookup_localstream.so.3.07.7  libgnsdk_manager.so.3.07.7  libgnsdk_moodgrid.so.3.07.7  libgnsdk_musicid.so.3.07.7  libgnsdk_musicid_file.so.3.07.7  libgnsdk_musicid_stream.so.3.07.7  libgnsdk_playlist.so.3.07.7  libgnsdk_storage_sqlite.so.3.07.7  libgnsdk_video.so.3.07.7
lib/linux_x86-32/: libgnsdk_dsp.so.3.07.7  libgnsdk_link.so.3.07.7  libgnsdk_lookup_local.so.3.07.7  libgnsdk_lookup_localstream.so.3.07.7  libgnsdk_manager.so.3.07.7  libgnsdk_moodgrid.so.3.07.7  libgnsdk_musicid.so.3.07.7  libgnsdk_musicid_file.so.3.07.7  libgnsdk_musicid_stream.so.3.07.7  libgnsdk_playlist.so.3.07.7  libgnsdk_storage_sqlite.so.3.07.7  libgnsdk_video.so.3.07.7
lib/mac_x86-32/: libgnsdk_dsp.3.07.7.dylib  libgnsdk_link.3.07.7.dylib  libgnsdk_lookup_local.3.07.7.dylib  libgnsdk_lookup_localstream.3.07.7.dylib  libgnsdk_manager.3.07.7.dylib  libgnsdk_moodgrid.3.07.7.dylib  libgnsdk_musicid.3.07.7.dylib  libgnsdk_musicid_file.3.07.7.dylib  libgnsdk_musicid_stream.3.07.7.dylib  libgnsdk_playlist.3.07.7.dylib  libgnsdk_storage_sqlite.3.07.7.dylib  libgnsdk_video.3.07.7.dylib
lib/mac_x86-64/: libgnsdk_link.3.07.7.dylib  libgnsdk_lookup_local.3.07.7.dylib  libgnsdk_lookup_localstream.3.07.7.dylib  libgnsdk_moodgrid.3.07.7.dylib  libgnsdk_musicid_file.3.07.7.dylib  libgnsdk_playlist.3.07.7.dylib  libgnsdk_storage_sqlite.3.07.7.dylib  libgnsdk_video.3.07.7.dylib
lib/win_x86-32/: gnsdk_dsp.lib  gnsdk_link.lib  gnsdk_lookup_local.lib  gnsdk_lookup_localstream.lib  gnsdk_manager.lib  gnsdk_moodgrid.lib  gnsdk_musicid.lib  gnsdk_musicid_file.lib  gnsdk_musicid_stream.lib  gnsdk_playlist.lib  gnsdk_storage_sqlite.lib  gnsdk_video.lib
src/: CMakeLists.txt  gnsdk_base.cpp  gnsdk_dsp.cpp  gnsdk_error.cpp  gnsdk_link.cpp  gnsdk_list.cpp  gnsdk_locale.cpp  gnsdk_log.cpp  gnsdk_lookup_local.cpp  gnsdk_lookup_localstream.cpp  gnsdk_manager.cpp  gnsdk_moodgrid.cpp  gnsdk_musicid.cpp  gnsdk_musicidfile.cpp  gnsdk_musicidstream.cpp  gnsdk_playlist.cpp  gnsdk_rhythm.cpp  gnsdk_std.cpp  gnsdk_storage_sqlite.cpp  gnsdk_taste.cpp  gnsdk_video.cpp
